packages/build/tests/error/fixtures/ipc/plugin.js
import { exit } from 'process'

export default {
  onPreBuild() {
    exit()
  },
  onBuild() {},
}
